--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -68,7 +68,8 @@ jobs:
       - name: Checkout deployments
         uses: actions/checkout@v2
         with:
-          repository: networkservicemesh/deployments-k8s
+          repository: glazychev-art/deployments-k8s
+          ref: forw_test
           path: networkservicemesh/deployments-k8s
       - name: Checkout files
         uses: actions/checkout@v2
