--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -109,6 +109,7 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          KUBERNETES_VERSION: ${{ secrets.NSM_KUBERNETES_VERSION }}
       - name: Publish test report
         uses: mikepenz/action-junit-report@v2.1.0
         if: ${{ always() }}
