rework aws scripts
Signed-off-by: denis-tingaikin <denis.tingajkin@xored.com>

--- a/cloudtest/aws.yaml
+++ b/cloudtest/aws.yaml
@@ -22,4 +22,4 @@ providers:
       stop: |
         scripts/aws-destroy.sh
       cleanup: |
-        scripts/destroy-old-clusters.sh 4 "^aws"
+        scripts/destroy-old-clusters.sh "^aws"
