--- a/cloudtest/aws.yaml
+++ b/cloudtest/aws.yaml
@@ -22,4 +22,4 @@ providers:
       stop: |
         scripts/aws-destroy.sh
       cleanup: |
-        scripts/destroy-old-clusters.sh "^aws"
+        scripts/destroy-old-clusters.sh "^aws-"
