remove creds section
Signed-off-by: denis-tingaikin <denis.tingajkin@xored.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -78,17 +78,6 @@ jobs:
         uses: actions/checkout@v2
         with:
           path: ${{ github.repository }}
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-2
-      - name: aws-iam-authenticator install
-        working-directory: ${{ github.repository }}
-        run: |
-          ./scripts/aws-init.sh
-          echo "$HOME/bin" >> $GITHUB_PATH
       - name: Set up /bin permissions
         run: |
           sudo chmod -R 777 /bin
@@ -109,6 +98,7 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: us-east-2
       - name: Publish test report
         uses: mikepenz/action-junit-report@v2.1.0
         if: ${{ always() }}
