--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -85,20 +85,42 @@ jobs:
         uses: actions/setup-go@v1
         with:
           go-version: 1.16
-      - name: Install cloudtest
-        run: |
-          go get github.com/networkservicemesh/cloudtest@master
-        env:
-          GO111MODULE: on
-          GOBIN: /bin
-      - name: Run tests with cloudtest
+      - name: Setup kind
+        uses: engineerd/setup-kind@v0.5.0
+      - name: Run tests with clusterctl on AWS
         working-directory: ${{ github.repository }}
         run: |
-          cloudtest
+          kubectl cluster-info
+          curl -L https://github.com/kubernetes-sigs/cluster-api/releases/download/v1.2.1/clusterctl-linux-amd64 -o clusterctl
+          chmod +x ./clusterctl
+          sudo mv ./clusterctl /usr/local/bin/clusterctl
+          clusterctl version
+          export CLUSTER_TOPOLOGY=true
+          curl -L https://github.com/kubernetes-sigs/cluster-api-provider-aws/releases/download/v1.5.0/clusterawsadm-linux-amd64 -o clusterawsadm
+          chmod +x clusterawsadm
+          sudo mv clusterawsadm /usr/local/bin
+          clusterawsadm version
+          clusterawsadm bootstrap iam create-cloudformation-stack
+          export AWS_B64ENCODED_CREDENTIALS=$(clusterawsadm bootstrap credentials encode-as-profile)
+          clusterctl init --infrastructure aws
+          clusterctl generate cluster aws-testing --flavor development \
+            --kubernetes-version v1.25.0 \
+            --control-plane-machine-count=1 \
+            --worker-machine-count=2 \
+            > aws-testing.yaml
+          kubectl apply -f aws-testing.yaml
+          kubectl get clusters
+          clusterctl describe cluster aws-testing
+          kubectl get kubeadmcontrolplanes
+          clusterctl get kubeconfig aws-testing > aws-testing.kubeconfig
+          export KUBECONFIG=aws-testing.kubeconfig
+          go test -count 1 -timeout 1h55m -race -v ./...
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: us-east-2
+          AWS_CONTROL_PLANE_MACHINE_TYPE: t3.xlarge
+          AWS_NODE_MACHINE_TYPE: t3.xlarge
       - name: Publish test report
         uses: mikepenz/action-junit-report@v2.1.0
         if: ${{ always() }}
@@ -106,6 +128,11 @@ jobs:
           report_paths: "**/cloud_test/results/junit.xml"
           suite_regex: "Test*"
           github_token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Cleanup
+        if: ${{ always() }}
+        run: |
+          kubectl delete cluster aws-testing
+          kind delete cluster
       - name: Upload logs
         uses: actions/upload-artifact@v2
         if: ${{ always() }}
