--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -89,7 +89,7 @@ jobs:
         uses: engineerd/setup-kind@v0.5.0
         with:
           image: kindest/node:v1.24.0
-      - name: Run tests with clusterctl on AWS
+      - name: Install clusterctl
         working-directory: ${{ github.repository }}
         run: |
           kubectl cluster-info
@@ -97,11 +97,18 @@ jobs:
           chmod +x ./clusterctl
           mv ./clusterctl /usr/local/bin/clusterctl
           clusterctl version
+      - name: Install clusterawsadm
+        working-directory: ${{ github.repository }}
+        run: |
           export CLUSTER_TOPOLOGY=true
           curl -L https://github.com/kubernetes-sigs/cluster-api-provider-aws/releases/download/v1.5.0/clusterawsadm-linux-amd64 -o clusterawsadm
           chmod +x clusterawsadm
           mv clusterawsadm /usr/local/bin
           clusterawsadm version
+      - name: Setup aws cluster
+        working-directory: ${{ github.repository }}
+        run: |
+          export CLUSTER_TOPOLOGY=true
           clusterawsadm bootstrap iam create-cloudformation-stack
           export AWS_B64ENCODED_CREDENTIALS=$(clusterawsadm bootstrap credentials encode-as-profile)
           clusterctl init --infrastructure aws
@@ -115,6 +122,10 @@ jobs:
           clusterctl describe cluster aws-testing
           kubectl get kubeadmcontrolplanes
           clusterctl get kubeconfig aws-testing > aws-testing.kubeconfig
+      - name: Run integration tests
+        working-directory: ${{ github.repository }}
+        run: |
+          export CLUSTER_TOPOLOGY=true
           export KUBECONFIG=aws-testing.kubeconfig
           go test -count 1 -timeout 1h55m -race -v ./...
         env:
