--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -78,7 +78,7 @@ jobs:
         run: |
           go test -count 1 -timeout 1h55m -race -v ./...
         env:
-          ARTIFACTS_DIR: logs-${{ matrix.ip_family }}
+          LOGS_ARTIFACTS_DIR: logs-${{ matrix.ip_family }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: us-east-2
