--- a/aws-ipv4.yaml
+++ b/aws-ipv4.yaml
@@ -14,6 +14,9 @@ addons:
   - name: vpc-cni
   - name: coredns
   - name: kube-proxy
+  - name: aws-ebs-csi-driver
+    attachPolicyARNs:
+      - arn:aws:iam::aws:policy/service-role/AmazonEBSCSIDriverPolicy
 
 iam:
   withOIDC: true
