--- a/aws-ipv4.yaml
+++ b/aws-ipv4.yaml
@@ -5,7 +5,7 @@ kind: ClusterConfig
 metadata:
   name: NSM_CLUSTER_NAME
   region: NSM_REGION
-  version: "1.27"
+  version: NSM_K8S_VERSION
 
 kubernetesNetworkConfig:
   ipFamily: IPv4
