--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -51,7 +51,8 @@ jobs:
           mv /tmp/eksctl /usr/local/bin
           eksctl version
 
-          curl -o aws-iam-authenticator https://s3.us-west-2.amazonaws.com/amazon-eks/1.21.2/2021-07-05/bin/linux/amd64/aws-iam-authenticator
+          curl -Lo aws-iam-authenticator https://github.com/kubernetes-sigs/aws-iam-authenticator/releases/download/v0.6.22/aws-iam-authenticator_0.6.22_$(uname -s)_amd64
+
           chmod 755 aws-iam-authenticator
           mv ./aws-iam-authenticator /usr/local/bin
 
@@ -60,11 +61,10 @@ jobs:
           mkdir -p ~/.local/bin
           mv ./kubectl ~/.local/bin/kubectl
           kubectl version --client
-          eksctl version
       - name: Create clusters
         working-directory: ${{ github.repository }}
         run: |
-          AWS_K8S_VERSION=$(echo $AWS_K8S_VERSION | cut -d '.' -f 1,2 | cut -c 2-)
+          AWS_K8S_VERSION=$(echo ${{ vars.NSM_KUBERNETES_VERSION }} | cut -d '.' -f 1,2 | cut -c 2-)
           echo $AWS_K8S_VERSION
           sed -i "s/NSM_CLUSTER_NAME/$AWS_CLUSTER_NAME/g" aws-${{ matrix.ip_family }}.yaml
           sed -i "s/NSM_REGION/$AWS_REGION/g" aws-${{ matrix.ip_family }}.yaml
@@ -78,7 +78,6 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: us-east-2
           AWS_CLUSTER_NAME: aws-${{ github.run_id }}-${{ github.run_number }}-${{ matrix.ip_family }}
-          AWS_K8S_VERSION: ${{ vars.NSM_KUBERNETES_VERSION }}
       - name: Run tests
         working-directory: ${{ github.repository }}
         run: |
